[gd_scene load_steps=8 format=3 uid="uid://b6c16injgwlwo"]

[ext_resource type="Script" path="res://test/drag_example/drop_item.gd" id="1_m2i8k"]
[ext_resource type="Script" path="res://test/drag_example/drag_drop_test.gd" id="1_rxqnd"]
[ext_resource type="Script" path="res://test/drag_example/drag_item.gd" id="2_kmuiw"]
[ext_resource type="Texture2D" uid="uid://drvbt52sivten" path="res://assets/textures/screen/Splash screen.png" id="2_tmwqt"]
[ext_resource type="Shader" path="res://test/drag_example/drag_drop_test.gdshader" id="4_37dsb"]
[ext_resource type="Texture2D" uid="uid://qctqwntldpcq" path="res://objects/meeple/Meeple_rect.svg" id="5_fvbv7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t1u1f"]
shader = ExtResource("4_37dsb")
shader_parameter/blur_amount = 3.5

[node name="Main_scene_test" type="Node2D"]
script = ExtResource("1_rxqnd")

[node name="SplashScreen" type="Sprite2D" parent="."]
visible = false
position = Vector2(328, 717)
texture = ExtResource("2_tmwqt")

[node name="DragItem" type="ColorRect" parent="."]
offset_left = 1400.0
offset_top = 468.0
offset_right = 1528.0
offset_bottom = 596.0
color = Color(0.433437, 0.553402, 0.944765, 1)
script = ExtResource("2_kmuiw")

[node name="DropContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 387.0
offset_top = 323.0
offset_right = 515.0
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2i8k")

[node name="MeepleTexture" type="TextureRect" parent="DropContainer"]
layout_mode = 2
texture = ExtResource("5_fvbv7")
expand_mode = 1

[node name="DropItem" type="ColorRect" parent="DropContainer"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="DropContainer"]
visible = false
layout_mode = 2
color = Color(1, 1, 1, 0.333333)

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
offset_left = 308.0
offset_top = 610.0
offset_right = 348.0
offset_bottom = 650.0

[node name="BlurTexture" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_t1u1f")
custom_minimum_size = Vector2(64, 64)
offset_left = 9.0
offset_top = -93.0
offset_right = 1451.0
offset_bottom = 1115.0
texture = ExtResource("5_fvbv7")
expand_mode = 1

[node name="Label" type="Label" parent="BlurTexture"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 22.3333
theme_override_font_sizes/font_size = 10
text = "sfjlk a;lfj flskfjsd f;lkasjdfs;fjsdfisdfsaafsdkjflf jasd;alfkjsd flsdkjf s;lfjsd fsd'flkjsdf sdflkjsaf ;lskfjas d;flkjsdf asl;kfjas lfksjdf slkfjs dlfjas flk"

[connection signal="mouse_entered" from="DropContainer" to="DropContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DropContainer" to="DropContainer" method="_on_mouse_exited"]
